package ch.uzh.group8.assignment1.exercise3;

public record Piece(Player owner, boolean isKing) {}
