package ch.uzh.group8.assignment1.exercise3;

public enum Player {
  PLAYER_WHITE,
  PLAYER_RED
}
